--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
 
             <h2>About Me</h2>
 
-            I am pursuing my PhD in Computer Science here at NTNU. My research topic is data mining. 
+            I am pursuing my PhD in Computer Science at NTNU, Norway. <!--My research topic is data mining. 
 In somehow, others might say it is related (less) to machine learning (ML), no false positive, of course. In my works, I build automatically tuning models (optimizing a cost), specificcally for change detection. 
-<!-- I also took probabilistic artificial intelligence summer school (as a PhD course). I was assistant in the course natural language processing with python for the 3rd year bachelor student at NTNU, and was responsible for the labs.
+ I also took probabilistic artificial intelligence summer school (as a PhD course). I was assistant in the course natural language processing with python for the 3rd year bachelor student at NTNU, and was responsible for the labs.
 
 		 It happens quite often now, most people say doing ML. 
 It&#39;s understandable. People need to say that we know ML to have a higher chance of getting a job, all for food, money stuff ;). 
 Or in the worst case, not be alone in an air blade group. 
 However, I do not like to say that what I did is or makes me feel like I was doing research in ML. 
 -->
-I have interests in Optimization, and anything related to security. 
-I spent some time on ML, mostly with Capsule Net. 
+I have interests in Optimization, Data Mining, Optimization, Artificial Intelligent, Machine Learning, and anything related to security. 
+<!--I spent some time on ML, mostly with Capsule Net. 
 I was really excited in CapNet and unsupervised learning, found (thought) some ideas, but I still need to finish other stuffs with my PhD first. 
 So, I will be back to it later, sure soon. 
-<!--I don't know much Mathematics, but I will try best and use any means to not be out of the flows. -->
+<!--I don't know much Mathematics, but I will try best and use any means to not be out of the flows. 
 		
  I know/can understand some basic Math, that at least I can count how much money in my pocket.
 
@@ -126,7 +126,7 @@ I am a person of realism, like playing with number, e.g. lottery. My biggest dre
 If you are reading this, you might do searching something or curious on my things. If you find anything interesting or get what you want, please drop me an echo, because I haven't found it for a very long time.
 <br />
 
-Above all, I am not a l33t, I am a zombie, learning to act like professional. &#x1F33E;
+Above all, I am not a l33t, I am a zombie, learning to act like professional. &#x1F33E;-->
 		 <!--
 <br />		 
 Hi, you shoot me down, but I won't fall, because I am titanium. 
@@ -145,8 +145,8 @@ I don't like wearing a mask. I like doing the best.
 <br />
 Choose flying over or staying in, it's not our will.
 <br />	
--->
-I can sing a rainbow.
+
+I can sing a rainbow.-->
 
 			<!-- I am a Ph.D. fellow majoring in Computer Science at NTNU, Norway.
 			My research interests include data mining, optimization, artificial intelligent, and machine learning. 
