--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ and <a href="http://www.idi.ntnu.no/~noervaag/">Prof. Kjetil Nørvåg</a>, and I
             <div class="row item">
 
                <div class="twelve columns">                  
-                  <div class="info h5">Senior Software Engineer <span>•</span> <a href="https://www.mbbank.com.vn">Military Bank, Vietnam</a> <span>•</span><em class="date">May. 2013 - Sep. 2014</em>
+                  <div class="info h5">Senior Software Engineer <span>•</span> <a href="https://www.mbbank.com.vn">Military Bank, Vietnam</a> <span>•</span><em class="date">2013 - 2014</em>
 				  
 				  </div>
 
