--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <body>
-<embed src="HuyDuong_Resume.pdf" type="application/pdf" />
+<embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" />
 </body></html>
