--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<head>
+ html, body, form, main {
+    height: 100%;
+}
+</head>
 <body>
-<embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="600px" height="100%" />
+<embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
 </body></html>
