--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <head>
- html, body, form, main {
-    height: 100%;
+<style>
+html, body, form, main {
+margin: 0;
+padding: 0;
+height: 100%;
 }
+</style>   
 </head>
 <body>
 <embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
