--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ margin: 0;
 padding: 0;
 height: 100%;
 }
-</style>   
+</style> 
+ <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146795307-1"></script><script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-146795307-1');</script> 
 </head>
 <body>
 <embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
