--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@ height: 100%;
 </head>
 <body>
 <embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
+ <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=600"></script>
+
 </body></html>
