--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ margin: 0;
 padding: 0;
 height: 100%;
 }
+clustrmaps-map-container
+{
+  visibility: hidden;
+}
 </style> 
  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146795307-1"></script><script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-146795307-1');</script> 
 </head>
