--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ clustrmaps-map-container
 </head>
 <body>
 <embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=600"></script>
+ <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=1&h=1"></script>
 
 </body></html>
