--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<title>Huy Quang Duong Resume </title>
+<meta name="description" content="I am a PhD at NTNU in Computer Science. My interests are Computer Science, Algorithms, Data Mining, Optimization, Artificial Intelligence, Machine Learning, Software Engineer, and Security.">
 <head>
 <style>
 html, body, form, main {
@@ -15,6 +17,7 @@ clustrmaps-map-container
 </head>
 <body>
 <embed src="https://thi3nl0ng.github.io/HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
+ <embed src="https://thi3nl0ng.github.io/HuyDuong_CV.pdf" type="application/pdf" width="100%" height="100%" />
  <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=1&h=1"></script>
 
 </body></html>
