--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ clustrmaps-map-container
  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146795307-1"></script><script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-146795307-1');</script> 
 </head>
 <body>
- <embed src="HuyDuong_CV.pdf" type="application/pdf" width="100%" height="100%" />
+ <embed src="HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />
  <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=1&h=1"></script>
 
 </body></html>
