--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Huy Quang Duong Resume </title>
-<meta name="description" content="I am a PhD at NTNU in Computer Science. My interests are Computer Science, Algorithms, Data Mining, Optimization, Artificial Intelligence, Machine Learning, Software Engineer, and Security.">
+<meta name="description" content="I obtained My PhD in Computer Science from NTNU, Norway. My interests are Computer Science, Algorithms, Data Mining, Optimization, Artificial Intelligence, Machine Learning, Software Engineer, and Security.">
 <head>
 <style>
 html, body, form, main {
