--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ clustrmaps-map-container
 <body>
 <!-- <embed src="HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />-->
  <div style="display:flex; width:100%; height:100%;justify-content: center; align-items: center;  "> 
-   echo "Hello world"
+   echo "Hello world" > /dev/null
  </div>
  <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=1&h=1"></script>
 
