--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ html, body, form, main {
 margin: 0;
 padding: 0;
 height: 100%;
+font-family: Verdana,sans-serif;
 }
 clustrmaps-map-container
 {
@@ -18,7 +19,7 @@ clustrmaps-map-container
 <body>
 <!-- <embed src="HuyDuong_Resume.pdf" type="application/pdf" width="100%" height="100%" />-->
  <div style="display:flex; width:100%; height:100%;justify-content: center; align-items: center;  "> 
-   <div style="color:orange;">echo</div> "Hello world" > /dev/null
+   <div style="color:orange;">echo&nbsp;</div> "Hello world" &gt; /dev/null
  </div>
  <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=StKMKsk7Vkcrryj213CJxH6G_zhi29pc0x2PpIwc-ig&w=1&h=1"></script>
 
